updated api defines for testrail api

--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,4 @@
+# TestRail server configuration
 [Server_Config]
-server_url = www.tigers.com
-server_pass  = Tigers ; password of the server
-[SectionOne]
-Status: Single
-Name: Derek
-Value: Yes
-Age: 30
-Single: True
-
-[SectionTwo]
-FavoriteColor = Green
-[SectionThree]
-FamilyName: Johnson
-
-[Others]
-Route: 66
+server_url =
+server_pass  = Tigers
