adding wrapper method for get and post

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 # TestRail server configuration
 [Server_Config]
-server_url =
-server_pass  = Tigers
+server_url = "https://tigers.testrail.io"
+user_id = "guest@tigers.com"
+user_password = 12345
