addressed pep8 warnings

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 # TestRail server configuration
 [Server_Config]
-server_url = "https://tigers.testrail.io"
-user_id = "guest@tigers.com"
+server_url = https://tigers.testrail.io
+user_id = guest@tigers.com
 user_password = 12345
